# Money-Tracker-with-gui

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-build.yml  cmake-windows-build.yml  cmake-windows.yml
resources/: app.rc
src/: encrypter.cpp  encrypter.h  main.cpp  savingFunctions.cpp  savingFunctions.h
